Replace Google Analytics with GoatCounter

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 
 <body class="{% if page.url == '/' %}home-page{% endif %}">
 
-  {% if site.data.settings.google_analytics %}
-    {% include google-analytics.html %}
+  {% if site.data.settings.goatcounter %}
+    {% include goatcounter.html %}
   {% endif %}
 
   <!-- begin global wrap -->
