--- a/_includes/comic-navigation.html
+++ b/_includes/comic-navigation.html
@@ -1,4 +1,4 @@
-<p>
+<p class="comic-navigation">
     <a href="/{{ page.series }}-{{ page.issue_num | minus:1 }}">Prev</a>
      . <a href="/{{ page.series }}">Menu</a>
     {% unless page.last %}
