Shrink border radius of comic pages, add some margin between images

--- a/_layouts/comic.html
+++ b/_layouts/comic.html
@@ -32,7 +32,7 @@ layout: default
       {% endif %}
     </div>
 
-    <div class="page__content">
+    <div class="page__content, comic">
 
       {% include comic-navigation.html %}
       
