--- a/_sass/3-modules/_comic.scss
+++ b/_sass/3-modules/_comic.scss
@@ -2,5 +2,9 @@
 
 .comic-navigation {
     text-align: center;
-  }
-  
+}
+
+.comic img {
+    border-radius: 10px !important;
+    margin-bottom: 1rem !important;
+}
