--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,7 +46,7 @@ layout: default
     <div class="col col-9 col-w-8 col-d-12">
       <article class="post">
     
-        {% if page.video_embed %}
+        <!-- {% if page.video_embed %}
         <div class="post-video">
           <div class="post-video__wrap">
             <iframe src="{{ page.video_embed }}" loading="lazy" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -61,13 +61,13 @@ layout: default
         </div>
         {%endif %}
 
-        {% endif %}
+        {% endif %} -->
 
         <div class="post__content">
           {{ content }}
         </div>
 
-        {% include share-buttons.html %}
+        <!-- {% include share-buttons.html %} -->
 
       </article>
     </div>
