--- a/_includes/comic-navigation.html
+++ b/_includes/comic-navigation.html
@@ -1,7 +1,7 @@
 <p class="comic-navigation">
-    <a href="/{{ page.series }}-{{ page.issue_num | minus:1 }}">Prev</a>
+    <a href="/{{ page.series }}/{{ page.issue_num | minus:1 }}">Prev</a>
      . <a href="/{{ page.series }}">Menu</a>
     {% unless page.last %}
-     . <a href="/{{ page.series }}-{{ page.issue_num | plus:1 }}">Next</a>
+     . <a href="/{{ page.series }}/{{ page.issue_num | plus:1 }}">Next</a>
     {% endunless %}
 </p>
