--- a/_includes/sidebar-widgets/widget-post-comic.html
+++ b/_includes/sidebar-widgets/widget-post-comic.html
@@ -9,7 +9,7 @@
   {% endif %}
 
   {% if page.description %}
-  <p class="post-comic-description">{{ page.description }}</p>
+  <p class="post-comic-description">{{ page.description | markdownify | remove: '<p>' | remove: '</p>'}}</p>
   {% endif %}
 </div>
 
