--- a/_sass/3-modules/_sidebar.scss
+++ b/_sass/3-modules/_sidebar.scss
@@ -227,6 +227,8 @@
     transform: translate(0);
     width: 128px;
     height: 128px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 12px;
     border-radius: 50%;
     overflow: hidden;
