--- a/_sass/3-modules/_sidebar.scss
+++ b/_sass/3-modules/_sidebar.scss
@@ -224,25 +224,19 @@
 .widget-post-comic {
   .post-comic-image {
     position: relative;
-    transform: translate(0);
-    width: 128px;
-    height: 128px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 12px;
-    border-radius: 50%;
     overflow: hidden;
-    background-color: var(--background-alt-color);
-    transition: transform .3s ease;
+    text-align: center;
 
     img {
-      position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 75%;
+      max-width: 200px;
       object-fit: cover;
-      user-select: none;
+      border-radius: 5%;
     }
   }
 
