--- a/_includes/sidebar-widgets/widget-post-comic.html
+++ b/_includes/sidebar-widgets/widget-post-comic.html
@@ -4,7 +4,10 @@
 
   {% if page.image %}
   <div class="post-comic-image">
-    <img class="lazy" data-src="{{ page.image }}" alt="{{ page.title | escape }}">
+    <img
+      class="lazy" data-src="{{ site.s3_url }}/{{ page.series }}/meta/original.jpeg"
+      alt="{{ page.title | escape }}"
+    >
   </div>
   {% endif %}
 
