--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,25 +6,17 @@ layout: default
   <div class="row">
     <div class="col col-10 col-w-12">
       <div class="post__head">
-  
-        <div class="post__meta">
-          {% if page.tags.size >= 1 %}
-          <div class="post__tags">
-          {% for tag in page.tags %}
-            <a href="{{ site.baseurl }}/tags/?tag={{ tag | downcase | url_encode }}" class="post__tag">{{ tag }}</a>
-          {% endfor %}
-          </div>
-          {% endif %}
-          <span class="article__date">•<time datetime="{{ page.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%d %-b, %Y" %}{{ page.date | date: date_format }}</time></span>
-        </div>
-  
-        {% if page.title %}
         <h1 class="post__title">{{ page.title | escape }}</h1>
-        {% endif %}
-  
-        {% if page.description %}
-        <div class="post__description">{{ page.description }}</div>
-        {% endif %}
+        <span>
+          {% if page.year_end == "ongoing" %}
+          <span>({{ page.year_start }}–)</span>
+          {% elsif page.year_end %}
+          <span>({{ page.year_start }}–{{ page.year_end }})</span>
+          {% else %}
+          <span>({{ page.year_start }})</span>
+          {% endif %}
+        </span>
+        <div class="post__description">author 1 | author 2 </div>
       </div>
 
     </div>
@@ -37,31 +29,12 @@ layout: default
   <div class="row">
     <div class="sidebar-left col col-3 col-w-4 col-d-12">
       <aside class="sidebar">
-        {% include sidebar-widgets/widget-post-author.html %}
-        <!-- {% include sidebar-widgets/widget-featured-posts.html %} -->
-        <!-- {% include sidebar-widgets/widget-tags.html %} -->
+        {% include sidebar-widgets/widget-post-comic.html %}
       </aside>
     </div>
 
     <div class="col col-9 col-w-8 col-d-12">
       <article class="post">
-    
-        <!-- {% if page.video_embed %}
-        <div class="post-video">
-          <div class="post-video__wrap">
-            <iframe src="{{ page.video_embed }}" loading="lazy" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div>
-
-        {% else %}
-
-        {%if page.image %}
-        <div class="post-image">
-          <img class="lazy" data-src="{{site.baseurl}}{{page.image}}" alt="{{page.title}}">
-        </div>
-        {%endif %}
-
-        {% endif %} -->
 
         <div class="post__content">
           {{ content }}
@@ -74,9 +47,37 @@ layout: default
 
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col col-10 col-w-12">
+      <div class="post__bottom">
+
+        <!-- <div class="post__description">
+          <p class="post-comic-description">
+            Placeholder text
+          </p>
+        </div> -->
+  
+        <div class="post__meta">
+          {% if page.tags.size >= 1 %}
+          <div class="post__tags">
+          {% for tag in page.tags %}
+            <a href="{{ site.baseurl }}/tags/?tag={{ tag | downcase | url_encode }}" class="post__tag">{{ tag }}</a>
+          {% endfor %}
+          </div>
+          {% endif %}
+          <!-- <span class="article__date">•<time datetime="{{ page.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%d %-b, %Y" %}{{ page.date | date: date_format }}</time></span> -->
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 <!-- end post -->
 
-{% include post-navigation.html %}
+<!-- {% include post-navigation.html %} -->
 
 {% include related-posts.html %}
 
