change widget sidebar description font color from secondary to primary

--- a/_sass/3-modules/_sidebar.scss
+++ b/_sass/3-modules/_sidebar.scss
@@ -243,7 +243,7 @@
   .post-comic-description {
     margin-bottom: 0;
     font-size: 15px;
-    color: var(--text-alt-color);
+    // color: var(--text-alt-color);
   }
 
   @media (max-width: $desktop) {
