--- a/_includes/section-authors.html
+++ b/_includes/section-authors.html
@@ -13,7 +13,7 @@
           <div class="section-authors__content">
             <div class="section-authors__box">
             {% for author in site.authors limit:5 %}
-            {% assign post_count = site.posts | where:"author", author.username %}
+            <!-- {% assign post_count = site.posts | where_exp: "post", "post.authors contains author.username" %} -->
               <a href="{{ author.url }}" class="section-authors__image">
                 <img class="lazy" data-src="{{ author.image }}" alt="{{ author.name }}">
               </a>
