--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -6,7 +6,7 @@ layout: default
 <section class="section author">
 
   <div class="container">
-    {% assign post_count = site.posts | where: 'author', page.username %}
+    {% assign post_count = site.posts | where_exp: "post", "post.authors contains page.username" %}
 
     <div class="author__content">
       <div class="author__image"><img class="lazy" data-src="{{ page.image }}" alt="{{ page.name }}"></div>
@@ -38,7 +38,7 @@ layout: default
 
   {% if post_count.size >= 1 %}
   <div class="container">
-    <h2 class="author__posts__count">{{ post_count.size }}{% if post_count.size < 2 %}Post{% else %} Posts{% endif %}</h2>
+    <h2 class="author__posts__count">{{ post_count.size }} {% if post_count.size < 2 %}Comic{% else %}Comics{% endif %}</h2>
     <div class="row animate">
       {% for post in post_count %}
       <div class="col col-4 col-d-6 col-t-12">
