--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,13 @@
     <div class="row">
       <div class="col col-12">
 
-        <div class="footer__inner">
+        <!-- <div class="footer__inner">
           <div class="row">
             {% include footer-widgets/widget-info.html %}
             {% include footer-widgets/widget-recent-posts.html %}
             {% include footer-widgets/widget-subscribe.html %}
           </div>
-        </div>
+        </div> -->
 
         <div class="footer__info">
           <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.data.settings.title}}</a></div>
