Add 'last updated' at bottom of comic summary page'

--- a/_sass/3-modules/_comic.scss
+++ b/_sass/3-modules/_comic.scss
@@ -28,3 +28,10 @@
   .latest-table-entry-title {
     display: inline;
   }
+
+.comic-last-updated {
+  margin-bottom: 0;
+  font-size: 12px;
+  text-align: right;
+// color: var(--text-alt-color);
+}
