--- a/_includes/section-authors.html
+++ b/_includes/section-authors.html
@@ -15,7 +15,7 @@
             {% for author in site.authors limit:5 %}
             <!-- {% assign post_count = site.posts | where_exp: "post", "post.authors contains author.username" %} -->
               <a href="{{ author.url }}" class="section-authors__image">
-                <img class="lazy" data-src="{{ author.image }}" alt="{{ author.name }}">
+                <img class="lazy" data-src="{{ author.image }}" alt="{{ author.name | escape }}">
               </a>
             {% endfor %}
             </div>
