--- a/_includes/sidebar-widgets/widget-post-author.html
+++ b/_includes/sidebar-widgets/widget-post-author.html
@@ -5,14 +5,14 @@
   {% if author.image %}
   <div class="post-author-image">
     <a href="{{ author.url }}" class="post__author__image">
-      <img class="lazy" data-src="{{ author.image }}" alt="{{ author.name }}">
+      <img class="lazy" data-src="{{ author.image }}" alt="{{ author.name | escape }}">
     </a>
   </div>
   {% endif %}
 
   {% if author %}
   <h2 class="post-author-name">
-    <a href="{{ author.url }}">{{ author.name }}</a>
+    <a href="{{ author.url }}">{{ author.name | escape }}</a>
   </h2>
   {% endif %}
   {% if author.content %}
