--- a/_includes/search.html
+++ b/_includes/search.html
@@ -7,8 +7,8 @@
           <div class="search__group">
             <i class="search-input-icon ion ion-ios-search"></i>
             <i class="icon__search__close ion ion-md-close"></i>
-            <label for="js-search-input" class="screen-reader-text">Search for Blog</label>
-            <input type="text" id="js-search-input" class="search__text" autocomplete="off" placeholder="Type to search...">
+            <label for="js-search-input" class="screen-reader-text">Search by title or creator...</label>
+            <input type="text" id="js-search-input" class="search__text" autocomplete="off" placeholder="Search by title or creator...">
           </div>
           <div class="search-results-list" id="js-results-container"></div>
         </div>
