--- a/_includes/section-authors.html
+++ b/_includes/section-authors.html
@@ -13,14 +13,14 @@
           <div class="section-authors__content">
             <div class="section-authors__box">
             {% for author in site.authors limit:5 %}
-            <!-- {% assign post_count = site.posts | where_exp: "post", "post.authors contains author.username" %} -->
+            <!-- {% assign post_count = site.posts | where_exp: "post", "post.creators contains author.username" %} -->
               <a href="{{ author.url }}" class="section-authors__image">
                 <img class="lazy" data-src="{{ author.image }}" alt="{{ author.name | escape }}">
               </a>
             {% endfor %}
             </div>
             {% if site.authors.size > 5 %}
-            <a href="/authors/" class="section-authors__link">See all authors</a>
+            <a href="/creators/" class="section-authors__link">See all creators</a>
             {% endif %}
           </div>
 
