--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -6,10 +6,10 @@ layout: default
 <section class="section author">
 
   <div class="container">
-    {% assign post_count = site.posts | where_exp: "post", "post.authors contains page.username" %}
+    {% assign post_count = site.posts | where_exp: "post", "post.creators contains page.username" %}
 
     <div class="author__content">
-      <div class="author__image"><img class="lazy" data-src="{{ site.s3_url }}/authors/{{ page.username }}.jpeg" alt="Photo of {{ page.name }}"></div>
+      <div class="author__image"><img class="lazy" data-src="{{ site.s3_url }}/creators/{{ page.username }}.jpeg" alt="Photo of {{ page.name }}"></div>
       <h1 class="author__name">{{ page.name }}</h1>
 
       <div class="author__info">
