Update menu, create tags page

--- a/_includes/section-tags.html
+++ b/_includes/section-tags.html
@@ -1,4 +1,4 @@
-{% if site.data.settings.tags_section.enable == true and site.data.settings.tags_section.tags != null %}
+{% if site.data.settings.tags_section.tags != null %}
 
 {% if site.data.settings.tags_section.number_columns == 1 %}
   {% assign number_columns = 12 %}
