By tag shows latest updated comics first

--- a/_includes/section-tags.html
+++ b/_includes/section-tags.html
@@ -38,7 +38,8 @@
 
           <div class="row">
             {% assign count = 0 %}
-            {% for post in site.tags.[tag_word.tag] limit:{{number_posts}} %}
+            {% assign posts = site.tags.[tag_word.tag] | sort: 'last_updated' | reverse %}
+            {% for post in posts limit:{{number_posts}} %}
             {% assign count = count | plus: 1 %}
             <div class="col {% if site.data.settings.tags_section.number_columns > 0 and site.data.settings.tags_section.number_columns <= 4 %}col-{{number_columns}} col-d-6 col-t-12{% else %}col-4 col-d-6 col-t-12{% endif %}">
               {% include article.html %}
