--- a/_includes/section-latest-table.html
+++ b/_includes/section-latest-table.html
@@ -22,7 +22,7 @@
                 <div class="latest-table-comic-image">
                     <a href="/{{ post.series }}">
                         <img
-                      class="lazy" data-src="{{ site.s3_url }}/{{ post.series }}/meta/original.jpeg"
+                      src="{{ site.s3_url }}/{{ post.series }}/meta/original.jpeg"
                       alt="{{ page.title | escape }}"
                         >
                     </a>
