Distinguish all tags page from tag search function

--- a/_includes/sidebar-widgets/widget-tags.html
+++ b/_includes/sidebar-widgets/widget-tags.html
@@ -8,7 +8,7 @@
     <div class="tag-cloud">
     {% for item in (0..site.tags.size) %}{% unless forloop.last %}
     {% capture this_word %}{{ tag_words[item] | strip_newlines }}{% endcapture %}
-      <a href="{{ site.baseurl }}/tags/?tag={{ this_word | downcase | url_encode }}" class="tag-cloud-item">{{ this_word }}</a>
+      <a href="{{ site.baseurl }}/tag-search/?tag={{ this_word | downcase | url_encode }}" class="tag-cloud-item">{{ this_word }}</a>
     {% endunless %}
     {% endfor %}
     </div>
