--- a/_includes/footer-widgets/widget-recent-posts.html
+++ b/_includes/footer-widgets/widget-recent-posts.html
@@ -6,7 +6,7 @@
 
       {% if post.image %}
       <div class="article__head">
-        <a href="{{ post.url | prepend: site.baseurl }}" class="recent-posts__image" aria-hidden="true" tabindex="-1">
+        <a href="{{ post.url }}" class="recent-posts__image" aria-hidden="true" tabindex="-1">
           <img class="lazy" data-src="{{ site.s3_url }}/{{ post.series }}/meta/square.jpeg" alt="{{post.title}}">
         </a>
       </div>
@@ -18,7 +18,7 @@
           {% if post.tags.size >= 1 %}
           <div class="article__tags">
           {% for tag in post.tags %}
-            <a href="{{ site.baseurl }}/tag-search/?tag={{ tag | downcase | url_encode }}" class="article__tag">{{ tag }}</a>
+            <a href="/tag-search/?tag={{ tag | downcase | url_encode }}" class="article__tag">{{ tag }}</a>
           {% endfor %}
           </div>
           {% endif %}
