--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,7 +25,7 @@ layout: default
     
       <!-- {%if page.image %}
       <div class="page-image">
-        <img class="lazy" data-src="{{site.baseurl}}{{page.image}}" width="300" height="300" alt="{{page.title}}" loading="lazy">
+        <img class="lazy" data-src="{{page.image}}" width="300" height="300" alt="{{page.title}}" loading="lazy">
       </div>
       {% endif %} -->
     
