--- a/_includes/footer-widgets/widget-info.html
+++ b/_includes/footer-widgets/widget-info.html
@@ -2,11 +2,11 @@
   <div class="widget-footer widget-info">
 
     <div class="logo-footer">
-      <a class="logo-footer__link widget-title" href="{{ site.baseurl }}/">
+      <a class="logo-footer__link widget-title" href="/">
         {% if site.data.settings.logo or site.data.settings.logo_dark %}
-        <img class="logo-footer__image" src="{{ site.baseurl }}{{ site.data.settings.logo }}"
+        <img class="logo-footer__image" src="{{ site.data.settings.logo }}"
           alt="{{ site.data.settings.title }}">
-        <img class="logo-footer__image__dark" src="{{ site.baseurl }}{{ site.data.settings.logo_dark }}"
+        <img class="logo-footer__image__dark" src="{{ site.data.settings.logo_dark }}"
           alt="{{ site.data.settings.title }}">
         {% else %}
           {{ site.data.settings.title }}
