--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
       <div class="header__inner col col-12">
 
         <div class="logo">
-          <a class="logo__link" href="{{ site.baseurl }}/">
+          <a class="logo__link" href="/">
           {% if site.data.settings.logo or site.data.settings.logo_dark %}
-            <img class="logo__image" src="{{ site.baseurl }}{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
-            <img class="logo__image__dark" src="{{ site.baseurl }}{{ site.data.settings.logo_dark }}" alt="{{ site.data.settings.title }}">
+            <img class="logo__image" src="{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
+            <img class="logo__image__dark" src="{{ site.data.settings.logo_dark }}" alt="{{ site.data.settings.title }}">
           {% else %}
             {{ site.data.settings.title }}
           {% endif %}
