--- a/_includes/post-navigation.html
+++ b/_includes/post-navigation.html
@@ -10,7 +10,7 @@
           </svg>
         </div>
         {% endif %}
-        <img class="lazy" data-src="{{site.baseurl}}{{page.previous.image}}" alt="{{ page.title }}">
+        <img class="lazy" data-src="{{page.previous.image}}" alt="{{ page.title }}">
       </a>
       <div class="prev__box">
         <span class="post__nav post__nav__prev">Older post</span>
@@ -33,7 +33,7 @@
           </svg>
         </div>
         {% endif %}
-        <img class="lazy" data-src="{{site.baseurl}}{{page.next.image}}" alt="{{ page.title }}" loading="lazy">
+        <img class="lazy" data-src="{{page.next.image}}" alt="{{ page.title }}" loading="lazy">
       </a>
     </div>
     {% endif %}
