--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
   </div>
   <!-- end global wrap -->
 
-  <script src="{{ site.baseurl }}/js/scripts.js"></script>
-  <script src="{{ site.baseurl }}/js/common.js"></script>
+  <script src="/js/scripts.js"></script>
+  <script src="/js/common.js"></script>
 </body>
 
 </html>
