Test if changing tag-search/ to tags/ fixes the 404 issue

--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -29,7 +29,7 @@
               {% if page.tags.size >= 1 %}
                 {% for tag in page.tags %}
                   {% if forloop.index == 1 %}
-                    <a href="/tag-search/?tag={{ tag | downcase | url_encode }}" class="button">View all <i class="ion ion-ios-arrow-forward"></i></a>
+                    <a href="/tags/?tag={{ tag | downcase | url_encode }}" class="button">View all <i class="ion ion-ios-arrow-forward"></i></a>
                   {% endif %}
                 {% endfor %}
               {% endif %}
