--- a/_includes/article.html
+++ b/_includes/article.html
@@ -13,7 +13,7 @@
         {% if post.tags.size >= 1 %}
         <div class="article__tags">
         {% for tag in post.tags %}
-          <a href="/tags/?tag={{ tag | downcase | url_encode }}" class="article__tag">{{ tag }}</a>
+          <a href="/tag-search/?tag={{ tag | downcase | url_encode }}" class="article__tag">{{ tag }}</a>
         {% endfor %}
         </div>
         {% endif %}
