--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,7 +71,7 @@ layout: default
           {% if page.tags.size >= 1 %}
           <div class="post__tags">
           {% for tag in page.tags %}
-            <a href="/tags/?tag={{ tag | downcase | url_encode }}" class="post__tag">{{ tag }}</a>
+            <a href="/tag-search/?tag={{ tag | downcase | url_encode }}" class="post__tag">{{ tag }}</a>
           {% endfor %}
           </div>
           {% endif %}
