--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -6,7 +6,7 @@ layout: default
 <section class="section author">
 
   <div class="container">
-    {% assign post_count = site.posts | where_exp: "post", "post.creators contains page.username" %}
+    {% assign post_count = site.posts | where_exp: "post", "post.creators contains page.username" | sort: 'year_start' | reverse %}
 
     <div class="author__content">
       <div class="author__image"><img class="lazy" data-src="{{ site.s3_url }}/creators/{{ page.username }}.jpeg" alt="Photo of {{ page.name }}"></div>
