--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
         <div class="footer__info">
           <div class="copyright">{{site.time | date: '%Y'}} &copy; <a href="/">{{site.data.settings.title}}</a></div>
-          <div class="bottom_nav"> Terms | Privacy | <a href="https://komikeros.goatcounter.com">Views</a></div>
+          <div class="bottom_nav"> Terms | <a href="/privacy">Privacy</a> | <a href="https://komikeros.goatcounter.com">Views</a></div>
           <div class="footer__info__right">
             {% if site.data.settings.color_scheme == "auto" %}
             <div class="toggle-theme">
