Hide description from page content - description is metadata only

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,9 +9,9 @@ layout: default
     <div class="page__head">
       <div class="page__info">
         <h1 class="page__title">{{ page.title | escape }}</h1>
-        {% if page.description %}
+        <!-- {% if page.description %}
         <div class="page__description">{{ page.description }}</div>
-        {% endif %}
+        {% endif %} -->
       </div>
     
       {% if page.video_embed %}
