--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,21 +6,21 @@
   <!-- dissuade Microsoft AI scraping -->
   <meta name="robots" content="noarchive">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.data.settings.title }}{% endif %}</title>
+  <title>{% if page.layout == 'author' %}{{ page.name }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.data.settings.title }}{% endif %}</title>
   <meta name='description' content='{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.data.settings.description }}{% endif %}'>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
   <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="{% if page.url == "/" %}{{ site.data.settings.title }}{% else %}{{ page.title }} – {{ site.data.settings.title }}{% endif %}">
+  <meta name="twitter:card" content="{% if page.layout == 'author' %}summary{% else %}summary_large_image{% endif %}">
+  <meta name="twitter:title" content="{% if page.url == "/" %}{{ site.data.settings.title }}{% elsif page.layout == 'author' %}{{ page.name }} – {{ site.data.settings.title }}{% else %}{{ page.title }} – {{ site.data.settings.title }}{% endif %}">
   <meta name="twitter:description" content="{% if page.url == "/" %}{{ site.data.settings.description | strip_html | xml_escape }}{% elsif page.description %}{{ page.description | strip_html | xml_escape }}{% else %}{{ page.excerpt | strip_html | xml_escape }}{% endif %}">
-  <meta name="twitter:image:src" content="{{ page.image | absolute_url }}">
+  <meta name="twitter:image:src" content="{% if page.layout == 'author' %}{{ site.s3_url }}/creators/{{ page.username }}.jpeg" alt="Photo of {{ page.name }}{% endif %}">
 
   <!-- Facebook OpenGraph -->
-  <meta property="og:title" content="{% if page.url == "/" %}{{ site.data.settings.title }}{% else %}{{ page.title }} – {{ site.data.settings.title }}{% endif %}">
+  <meta property="og:title" content="{% if page.url == "/" %}{{ site.data.settings.title }}{% elsif page.layout == 'author' %}{{ page.name }} – {{ site.data.settings.title }}{% else %}{{ page.title }} – {{ site.data.settings.title }}{% endif %}">
   <meta property="og:description" content="{% if page.url == "/" %}{{ site.data.settings.description | strip_html | xml_escape }}{% elsif page.description %}{{ page.description | strip_html | xml_escape }}{% else %}{{ page.excerpt | strip_html | xml_escape }}{% endif %}">
-  <meta property="og:image" content="{{ page.image | absolute_url }}">
+  <meta property="og:image" content="{% if page.layout == 'author' %}{{ site.s3_url }}/creators/{{ page.username }}.jpeg" alt="Photo of {{ page.name }}{% endif %}">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
