--- a/_includes/article.html
+++ b/_includes/article.html
@@ -3,7 +3,7 @@
 
     <div class="article__head">
       <a href="{{ post.url }}" class="article__image" aria-hidden="true" tabindex="-1">
-        <img class="lazy" data-src="{{ site.s3_url }}/{{ post.series }}/meta/square.jpeg" alt="{{post.title}}">
+        <img class="lazy" data-src="{{ site.s3_url }}/{{ post.series }}/meta/square.jpeg" alt="{{ post.title | escape }}">
       </a>
     </div>
 
