--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,23 +6,23 @@
   <!-- dissuade Microsoft AI scraping -->
   <meta name="robots" content="noarchive">
 
-  <title>{% if page.layout == 'author' %}{{ page.name }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.data.settings.title }}{% endif %}</title>
-  <meta name='description' content='{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 100 }}{% elsif page.layout == 'author' %}{% else %}{{ site.data.settings.description }}{% endif %}'>
+  <title>{% if page.layout == 'author' %}{{ page.name }}{% elsif page.layout == 'post' %}{{ page.title }} ({{ page.year_start }}){% elsif page.title %}{{ page.title }}{% else %}{{ site.data.settings.title }}{% endif %}</title>
+  <meta name='description' content='{% if page.description %}{{ page.description | markdownify | strip_html | strip_newlines | truncate: 140 }}{% elsif page.layout == 'author' %}{% else %}{{ site.data.settings.description }}{% endif %}'>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="{% if page.layout == 'author' %}summary{% else %}summary_large_image{% endif %}">
   <meta name="twitter:title" content="{% if page.url == "/" %}{{ site.data.settings.title }}{% elsif page.layout == 'author' %}{{ page.name }} – {{ site.data.settings.title }}{% else %}{{ page.title }} – {{ site.data.settings.title }}{% endif %}">
-  <meta name="twitter:description" content="{% if page.url == "/" %}{{ site.data.settings.description | strip_html | xml_escape }}{% elsif page.description %}{{ page.description | strip_html | xml_escape }}{% else %}{{ page.excerpt | strip_html | xml_escape }}{% endif %}">
-  <meta name="twitter:image:src" content="{% if page.layout == 'author' %}{{ site.s3_url }}/creators/{{ page.username }}.jpeg{% endif %}">
-  <meta name="twitter:image:alt" content="{% if page.layout == 'author' %}Photo of {{ page.name }}{% endif %}">
+  <meta name="twitter:description" content="{% if page.url == "/" %}{{ site.data.settings.description | strip_html | xml_escape }}{% elsif page.description %}{{ page.description | markdownify | strip_html | strip_newlines | xml_escape }}{% else %}{{ page.excerpt | markdownify | strip_html | xml_escape }}{% endif %}">
+  <meta name="twitter:image:src" content="{% if page.layout == 'author' %}{{ site.s3_url }}/creators/{{ page.username }}.jpeg{% elsif page.layout == 'post' %}{{ site.s3_url }}/{{ page.series }}/meta/square.jpeg{% endif %}">
+  <meta name="twitter:image:alt" content="{% if page.layout == 'author' %}Photo of {{ page.name }}{% elsif page.layout == 'post' %}{{ page.title | escape }}{% endif %}">
 
   <!-- Facebook OpenGraph -->
   <meta property="og:title" content="{% if page.url == "/" %}{{ site.data.settings.title }}{% elsif page.layout == 'author' %}{{ page.name }} – {{ site.data.settings.title }}{% else %}{{ page.title }} – {{ site.data.settings.title }}{% endif %}">
-  <meta property="og:description" content="{% if page.url == "/" %}{{ site.data.settings.description | strip_html | xml_escape }}{% elsif page.description %}{{ page.description | strip_html | xml_escape }}{% else %}{{ page.excerpt | strip_html | xml_escape }}{% endif %}">
-  <meta property="og:image" content="{% if page.layout == 'author' %}{{ site.s3_url }}/creators/{{ page.username }}.jpeg" alt="Photo of {{ page.name }}{% endif %}">
-  <meta property="og:image:alt" content="{% if page.layout == 'author' %}Photo of {{ page.name }}{% endif %}">
+  <meta property="og:description" content="{% if page.url == "/" %}{{ site.data.settings.description | strip_html | xml_escape }}{% elsif page.description %}{{ page.description | markdownify | strip_html | strip_newlines | xml_escape }}{% else %}{{ page.excerpt | markdownify | strip_html | xml_escape }}{% endif %}">
+  <meta property="og:image" content="{% if page.layout == 'author' %}{{ site.s3_url }}/creators/{{ page.username }}.jpeg{% elsif page.layout == 'post' %}{{ site.s3_url }}/{{ page.series }}/meta/square.jpeg{% endif %}">
+  <meta property="og:image:alt" content="{% if page.layout == 'author' %}Photo of {{ page.name }}{% elsif page.layout == 'post' %}{{ page.title | escape }}{% endif %}">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
